<resources>
    <string name="app_name">Firebase Auth</string>
    
    <!--  Login Fragment  -->
    <string name="txt_screen_title_login">Masuk</string>
    <string name="txt_welcome_back">Selamat Datang Kembali!</string>
    <string name="txt_welcome_description">Silahkan masuk terlebih dahulu dengan menggunakan email dan password anda.</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_button_login">Masuk</string>
    <string name="txt_loading">Loading</string>
    <string name="txt_do_not_have_account">Belum punya akun?</string>
    <string name="txt_btn_register">Daftar</string>
    <string name="txt_or">---- Atau ----</string>
    <string name="txt_btn_login_google">Masuk dengan akun Google</string>
    <string name="txt_btn_forgot_password">Lupa Password?</string>
    <string name="txt_btn_help">Bantuan</string>
    <string name="txt_need_help">Butuh Bantuan?</string>
    
    <!--  Register Fragment  -->
    <string name="txt_screen_title_register">Daftar</string>
    <string name="txt_welcome_newcomer">Halo, Selamat Datang!</string>
    <string name="txt_welcome_register_description">Silahkan buat akun terlebih dahulu sebelum masuk ke aplikasi.</string>
    <string name="txt_hint_name">Nama</string>
    <string name="txt_hint_password_best_practice">Harus berisi Huruf besar, Huruf kecil, Angka dan paling sedikit 8 karakter</string>
    <string name="txt_hint_password_confirmation">Konfirmasi Password</string>
    <string name="txt_already_have_account">Sudah punya akun?</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_screen_reset_password">Reset Password</string>
    <string name="txt_reset_password_desc">Masukkan email terdaftar anda untuk menerima tautan reset sandi</string>
    <string name="txt_btn_send_reset_link">Selesai</string>
</resources>